--- a/1. 什么是时间分片.md
+++ b/1. 什么是时间分片.md
@@ -133,23 +133,46 @@ self.onmessage = function () {
 
 具体实现如下：
 
-```javascript
-const ts = gen => {
-    if (!gen || typeof gen !== 'function') {
-        new Error('Please input function !')
+```html
+<style>
+    * {
+        margin: 0;
+        padding: 0;
     }
-    gen = gen()
-    return (ddl) => {
-        let task = null
-        do {
-            task = gen.next()
-        } while (!task.done && ddl.timeRemaining() > 0)
-        if (task.done) {
+    .list {
+        width: 60vw;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+</style>
+<ul class="list"></ul>
+<script>
+    'use strict'
+    function gen(task) {
+      requestIdleCallback(deadline => {
+        let next = task.next()
+        while (!next.done) {
+          if (deadline.timeRemaining() <= 0) {
+            gen(task)
             return
+          }
+          next = task.next()
         }
-        requestIdleCallback(task)
+      })
     }
-}
+    let list = document.querySelector('.list')
+    let total = 100000
+    function* loop() {
+      for (let i = 0; i < total; ++i) {
+        let item = document.createElement('li')
+        item.innerText = `我是${i}`
+        list.appendChild(item)
+        yield
+      }
+    }
+    gen(loop())
+</script>
 ```
 
 
