--- a/2. JavaScript实现指定数量的并发限制.md
+++ b/2. JavaScript实现指定数量的并发限制.md
@@ -12,6 +12,9 @@
 
 ```javascript
 const group = (list = [], max = 0) => {
+    if (!list.length) {
+        return list
+    }
     let results = []
     for (let i = 0, len = list.length; i < len; i += max) {
         results.push(list.slice(i, i + max))
@@ -24,21 +27,23 @@ const group = (list = [], max = 0) => {
 
 接下来我们再来一个用`async` + `await`实现的请求集合封装。
 
-我们通过`for...of`去遍历每一个异步函数，然后用`async` + `await`确保函数的执行顺序，再用`try...catch`来保证即使`reject`报错也不会导致无法继续执行任务。
+我们通`Promise.allSettled`去执行每一组的请求集合。
+
+`Promise.allSettled`是一个新的API，跟`Promise.all`差不多的用法，也是接受的数组，不过不同的是`Promise.allSettled`会等所有任务结束之后才会返回结果，而`Promise.all`只要有一个`reject`就会返回结果。
 
 ```javascript
 const requestHandler = async (
     groupedUrl = [],
-    callback = () => {}
+    callback = () => { }
 ) => {
-    let results = []
-    for (let data of groupedUrl) {
-        try {
-            const result = await data().then(callback)
-            results.push(result)
-        } catch {}
+    if (!groupedUrl.length) {
+        callback()
+        return groupedUrl
     }
-    return results
+    const newGroupedUrl = groupedUrl.map(fn => fn())
+    const resultsMapper = (results) => results.map(callback)
+    const data = await Promise.allSettled(newGroupedUrl).then(resultsMapper)
+    return data;
 }
 ```
 
@@ -48,9 +53,11 @@ const requestHandler = async (
 const sendRequest = async (
     urls = [],
     max = 0,
-    callback = () => {}
+    callback = () => { }
 ) => {
-    const { length } = urls
+    if (!urls.length) {
+        return urls
+    }
     const groupedUrls = group(urls, max)
     const results = []
     console.log('start !')
@@ -71,25 +78,24 @@ const sendRequest = async (
 我们执行下栗子：
 
 ```javascript
-const p1 = () => new Promise((resolve, reject) => setTimeout(resolve, 1000, 'p1'))
+const p1 = () => new Promise((resolve, reject) => setTimeout(reject, 1000, 'p1'))
 const p2 = () => Promise.resolve(2)
 const p3 = () => new Promise((resolve, reject) => setTimeout(resolve, 2000, 'p3'))
 const p4 = () => Promise.resolve(4)
-const p5 = () => new Promise((resolve, reject) => setTimeout(resolve, 2000, 'p5'))
+const p5 = () => new Promise((resolve, reject) => setTimeout(reject, 2000, 'p5'))
 const p6 = () => Promise.resolve(6)
 const p7 = () => new Promise((resolve, reject) => setTimeout(resolve, 1000, 'p7'))
 const p8 = () => Promise.resolve(8)
-const p9 = () => new Promise((resolve, reject) => setTimeout(resolve, 1000, 'p9'))
+const p9 = () => new Promise((resolve, reject) => setTimeout(reject, 1000, 'p9'))
 const p10 = () => Promise.resolve(10)
 const p11 = () => new Promise((resolve, reject) => setTimeout(resolve, 2000, 'p10'))
 const p12 = () => Promise.resolve(12)
-const p13 = () => new Promise((resolve, reject) => setTimeout(resolve, 1000, 'p11'))
+const p13 = () => new Promise((resolve, reject) => setTimeout(reject, 1000, 'p11'))
 const p14 = () => Promise.resolve(14)
-const ps = [p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12, p13, p14]
 
-sendRequest(ps, 3, result => {
-    console.log(result)
-    return result
+const ps = [p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12, p13, p14]
+sendRequest(ps, 3, ({reason, value}) => {
+    console.log(reason || value)
 })
 ```
 
